opam-version: "2.0"
maintainer: [ "Reynir Björnsson <reynir@reynir.dk>" ]
authors: [ "Hannes Mehnert <hannes@mehnert.org" ]
homepage: "https://git.robur.coop/reynir/oneffs"
bug-reports: "https://git.robur.coop/reynir/oneffs/issues"
dev-repo: "git+https://git.robur.coop/reynir/oneffs.git"
license: "ISC"
synopsis: "One-file filesystem fail-safe is a filesystem for storing a single unnamed file in a fail-safe manner"
description: """
One-file filesystem is a filesystem for storing a single unnamed file. It is
suitable for storing data that require safe-guards against interrupted writes.
For example, it is useful for storing state that needs to be updated and where
recovering older data is preferable over total data loss. Cryptographic SHA256
checksums are used to ensure integrity of both the data and the superblock.
"""

build: [
  [ "dune" "subst" ] { dev }
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] { with-test }
]
depends: [
  "dune" {>= "3.4"}
  "ocaml" {>= "4.08.0"}
  "mirage-block" {>= "3.0.0"}
  "mirage-clock"
  "lwt" {>= "2.6.0"}
  "cstruct" {>= "6.0.0"}
  "ptime"
  "digestif"
  "logs"
]
