opam-version: "2.0"
maintainer: [ "Reynir Björnsson <reynir@reynir.dk>" ]
authors: [ "Reynir Björnsson <reynir@reynir.dk>" ]
homepage: "https://git.robur.io/reynir/oneffs"
bug-reports: "https://git.robur.io/reynir/oneffs/issues"
dev-repo: "git+https://git.robur.io/reynir/oneffs.git"
license: "ISC"
synopsis: "One-file filesystem is a filesystem for storing a single unnamed file"
description: """
One-file filesystem is a filesystem for storing a single unnamed file. It is
suitable for storing data that may be lost on updates. For example a cache of
pre-computed cryptographic checksums that are slow to compute, but that we
would rather recompute than have stale checksums.
CRC32 checksums are used to ensure integrity.
"""

build: [
  [ "dune" "subst" ] { dev }
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] { with-test }
]
depends: [
  "dune" {>= "3.4"}
  "ocaml" {>= "4.08.0"}
  "mirage-block" {>= "3.0.0"}
  "lwt" {>= "5.3.0"}
  "cstruct" {>= "6.0.0"}
  "checkseum"
  "optint" {>= "0.0.5"}
]
